# advent-of-code

./: .gitignore  README.md  setup.sh
2023/rust/: run.sh
2024/input-files/: day-24-puzzle-input-modified  rename.py
2024/java/: build.gradle  build.sh  run.sh  settings.gradle
2024/python/: run.sh
2024/rust/: Cargo.toml  build.sh  run.sh
clojure/: README.md  build.sh  project.clj  run.sh
clojure/doc/: intro.md
cpp/: CMakeLists.txt  build.sh  install.sh  main.cpp  run.sh
cpp/src/: solution.hpp  utils.cpp  utils.hpp
cpp/src/2022/: day_1.cpp  day_1.hpp
cpp/src/2025/: day_1.cpp  day_1.hpp  day_10.cpp  day_10.hpp  day_11.cpp  day_11.hpp  day_12.cpp  day_12.hpp  day_2.cpp  day_2.hpp  day_3.cpp  day_3.hpp  day_4.cpp  day_4.hpp  day_5.cpp  day_5.hpp  day_6.cpp  day_6.hpp  day_7.cpp  day_7.hpp  day_8.cpp  day_8.hpp  day_9.cpp  day_9.hpp  day_x_template.cpp  day_x_template.hpp
input-files/2023/: rename.py
java/: build.gradle  build.sh  run.sh  settings.gradle
python/: build.sh  run.sh
python-solutions/: aoc1.py
python-solutions/Day1/: aoc1v2.py
python/Day2/: aoc2.py
python/src/: main.py  solution.py
runner/: Cargo.toml
runner/src/: main.rs
rust/: Cargo.toml  build.sh  run.sh
rust-solutions/: Cargo.toml  output.txt
rust-solutions-2024/: Cargo.toml
rust-solutions-2024/src/: day10.rs  day11.rs  day13.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
rust-solutions/src/: day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  (+12 more)
utils/: README.md
(+125 files in other folders)
